fixed bug in which the language scroller would collapse on mobile

--- a/src/react/components/LanguageScroller/LanguageScroller.css
+++ b/src/react/components/LanguageScroller/LanguageScroller.css
@@ -162,20 +162,20 @@
 			width: 100%;
 			height: 10em;
 			top: 0;
-			/*overflow-x: hidden;*/
 			overflow-y: hidden;
 		}
 			.list {
-				display: flex;
-				flex-wrap: nowrap;
 				width: 100%;
 				height: calc(100% );
 				padding: 0 0 1.62em;
-				flex-direction: row;
+				white-space: nowrap;
 				overflow-y: hidden;
 				overflow-x: scroll;
 			}
 				.language {
+					display: inline-block;
+					height: 100%;
+					vertical-align: top;
 					text-align: center;
 				}
 				.language + .language {
